updated about me and fixed missing colors in light-theme

--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -18,4 +18,6 @@
     --transparent-text: rgba(0, 0, 0, 0.7);
     --transparent-bg: rgba(0, 0, 0, 0.05);
     --light-transparent-bg: rgba(255, 255, 255, 0.1);
+    --highlight: #d44729;
+    --hightlight-hover: #BC4024;
 }
